--- a/res/layout/login.xml
+++ b/res/layout/login.xml
@@ -42,6 +42,7 @@
                     android:layout_height="wrap_content"
                     android:hint="Enter id"
                     android:singleLine="true"
+                    android:inputType="phone"
                     android:id="@+id/input_memberid"
                     android:layout_gravity="right|center_vertical"
                     android:textAlignment="viewStart"
