--- a/res/layout/step_back_image.xml
+++ b/res/layout/step_back_image.xml
@@ -5,12 +5,13 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
-
-    <ImageView android:layout_width="match_parent"
-               android:layout_height="144dp"
-               android:id="@+id/back_image"
-               android:layout_alignParentTop="true"
+    <FrameLayout
+            android:id="@+id/back_camera_preview"
+            android:layout_width="match_parent"
+            android:layout_height="320dp"
+            android:layout_weight="3"
             />
+
 
     <RelativeLayout
             android:orientation="vertical"
@@ -32,6 +33,13 @@
                 android:title="continue"
                 android:layout_toRightOf="@+id/step2_cancel" android:text="continue" android:textSize="24sp"
                 android:padding="8dp"/>
+
+        <Button android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Snap"
+                android:id="@+id/step2_take_snap"
+                android:layout_toRightOf="@+id/step2_submit"
+                />
 
 
     </RelativeLayout>
