--- a/res/layout/step_front_image.xml
+++ b/res/layout/step_front_image.xml
@@ -7,18 +7,11 @@
 
 
     <FrameLayout
-            android:id="@+id/camera_preview"
+            android:id="@+id/front_camera_preview"
             android:layout_width="match_parent"
-            android:layout_height="240dp"
+            android:layout_height="320dp"
             android:layout_weight="3"
             />
-
-
-    <!--<ImageView android:layout_width="match_parent"-->
-    <!--android:layout_height="72dp"-->
-    <!--android:id="@+id/front_image"-->
-    <!--android:layout_alignParentTop="true"-->
-    <!--/>-->
 
     <RelativeLayout
             android:orientation="vertical"
