--- a/res/layout/home.xml
+++ b/res/layout/home.xml
@@ -3,46 +3,24 @@
                 android:orientation="vertical"
                 android:layout_width="fill_parent"
                 android:layout_height="fill_parent"
-                android:gravity="center"
-                android:layout_marginLeft="8dp"
-                android:layout_marginRight="8dp"
-                android:layout_marginTop="8dp"
-        >
+                android:gravity="center">
+
+
+    <LinearLayout android:layout_width="fill_parent"
+                  android:layout_height="fill_parent"
+                  android:id="@+id/map_layout"
+                  android:layout_alignParentTop="true"/>
     <TextView
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:id="@+id/existing_data"
             android:text="Your Are at:"
-            android:layout_alignParentLeft="true"
             android:lineSpacingExtra="8dp"
             android:textSize="14sp"
             android:textColor="@color/black"
             android:fitsSystemWindows="true"
             android:paddingTop="8dp"
-            android:gravity="center_vertical"/>
-
-    <ImageView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/map_image"/>
-
-
-    <!--Todo yet to implement it-->
-
-
-    <LinearLayout android:layout_width="fill_parent"
-                  android:layout_height="104dp"
-                  android:id="@+id/map_layout"
-                  android:layout_alignBottom="@id/existing_data"/>
-    <!--<fragment-->
-    <!--xmlns:android="http://schemas.android.com/apk/res/android"-->
-    <!--android:layout_width="match_parent"-->
-    <!--android:layout_height="60dp"-->
-    <!--android:id="@+id/map_view"-->
-    <!--class="com.google.android.gms.maps.SupportMapFragment"/>-->
-    <!--android:apiKey="AIzaSyC25Km7lzNd9_cALLBKNYtdsgttdF2Vq2w"/>-->
-
-
+            />
     <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
