--- a/res/layout/home.xml
+++ b/res/layout/home.xml
@@ -20,16 +20,19 @@
             android:textColor="@color/black"
             android:fitsSystemWindows="true"
             android:paddingTop="8dp"
+            android:visibility="invisible"
             />
     <Button
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="50dp"
             android:text="Start Capture"
             android:id="@+id/start_capture"
             android:gravity="center"
             android:layout_centerHorizontal="true"
             android:layout_alignParentBottom="true"
+            android:textAlignment="center"
             android:paddingTop="16dp"
+            android:textSize="18sp"
             android:layout_marginBottom="24dp"/>
 </RelativeLayout>
 
