--- a/res/layout/dashboard.xml
+++ b/res/layout/dashboard.xml
@@ -1,25 +1,47 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                android:orientation="vertical"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              android:orientation="vertical"
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              android:padding="8dp">
 
 
     <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/saved_data"/>
+            android:textSize="16sp"
+            android:textStyle="bold"
+            android:paddingLeft="8dp"
+            android:text="Previous Locations:"/>
 
+    <TextView
+            android:layout_width="match_parent"
+            android:layout_height="190dp"
+            android:id="@+id/saved_data"
+            android:textSize="16sp"
+            android:layout_weight="2"
+            android:visibility="gone"
+            android:paddingTop="16dp"/>
+
+
+    <ListView android:layout_height="wrap_content"
+              android:layout_width="match_parent"
+              android:id="@+id/list_container"
+              android:layout_weight="2"
+              android:paddingTop="8dp"/>
 
     <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:layout_height="96dp"
             android:id="@+id/start_tracking"
-            android:text="Save Location"
+            android:text="Start Capturing Location"
             android:gravity="center"
+            android:textAlignment="center"
             android:layout_centerHorizontal="true"
-            android:layout_below="@+id/saved_data"/>
+            android:layout_below="@+id/saved_data"
+            android:layout_weight="2"
+            android:layout_gravity="center"/>
 
 
-</RelativeLayout>
+</LinearLayout>
