--- a/res/layout/home.xml
+++ b/res/layout/home.xml
@@ -11,28 +11,31 @@
                   android:id="@+id/map_layout"
                   android:layout_alignParentTop="true"/>
     <TextView
-            android:layout_width="fill_parent"
+            android:layout_width="280dp"
             android:layout_height="wrap_content"
             android:id="@+id/existing_data"
-            android:text="Your Are at:"
             android:lineSpacingExtra="8dp"
             android:textSize="14sp"
             android:textColor="@color/black"
             android:fitsSystemWindows="true"
-            android:paddingTop="8dp"
-            android:visibility="invisible"
+            android:padding="16dp"
+            android:layout_margin="16dp"
+            android:background="#20000000"
+            android:textAlignment="viewStart"
             />
+
     <Button
-            android:layout_width="wrap_content"
-            android:layout_height="50dp"
-            android:text="Start Capture"
+            android:layout_width="280dp"
+            android:layout_height="80dp"
+            android:text="Capture Location"
             android:id="@+id/start_capture"
-            android:gravity="center"
-            android:layout_centerHorizontal="true"
             android:layout_alignParentBottom="true"
             android:textAlignment="center"
-            android:paddingTop="16dp"
-            android:textSize="18sp"
-            android:layout_marginBottom="24dp"/>
+            android:layout_weight="2"
+            android:layout_marginBottom="16dp"
+            android:layout_centerInParent="true"
+            android:layout_alignParentLeft="true"
+            android:layout_margin="16dp"
+            />
 </RelativeLayout>
 
