--- a/res/layout/home_layout.xml
+++ b/res/layout/home_layout.xml
@@ -22,7 +22,8 @@
             android:textSize="16sp"
             android:layout_weight="2"
             android:visibility="gone"
-            android:paddingTop="16dp"/>
+            android:paddingTop="16dp"
+            android:layout_margin="8dp"/>
 
 
     <ListView android:layout_height="wrap_content"
