Cleaned up Final & Result Activities

--- a/res/layout/final_layout.xml
+++ b/res/layout/final_layout.xml
@@ -3,13 +3,39 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:orientation="vertical"
               android:layout_width="match_parent"
-              android:layout_height="match_parent">
+              android:layout_height="match_parent"
+              android:layout_margin="16dp">
 
     <TextView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:text="Your Data sent Successfully"
+            android:text="Location Details Successfully Saved."
             android:textSize="24sp"
-            android:gravity="center"/>
+            android:gravity="center"
+            android:layout_weight="1"/>
 
+    <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="3"
+            android:layout_marginBottom="8dp"
+            android:layout_gravity="bottom">
+
+        <Button
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:id="@+id/home"
+                android:text="Home"
+                android:layout_weight="2"/>
+
+        <Button
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:id="@+id/exit"
+                android:text="Exit"
+                android:layout_weight="2"/>
+
+
+    </LinearLayout>
 </LinearLayout>
