--- a/res/layout/step_result.xml
+++ b/res/layout/step_result.xml
@@ -3,60 +3,60 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 android:orientation="vertical"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="match_parent"
+                android:layout_margin="8dp">
+
+
+    <TextView android:layout_width="wrap_content"
+              android:layout_height="wrap_content"
+              android:id="@+id/location_result"
+              android:padding="16dp"
+              android:lineSpacingExtra="8dp"
+              android:text="Location Details"
+              android:textSize="16sp"
+            />
 
     <RelativeLayout
             android:orientation="horizontal"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:layout_below="@id/location_result"
+            android:paddingBottom="8dp">
 
-        <TextView android:layout_width="wrap_content"
-                  android:layout_height="wrap_content"
-                  android:id="@+id/location_result"
-                  android:padding="8dp"
-                  android:text="Location Details"
+        <ImageView android:layout_width="wrap_content"
+                   android:layout_height="wrap_content"
+                   android:id="@+id/front_image_result"
+                   android:paddingRight="4dp"
                 />
 
-        <RelativeLayout
-                android:orientation="vertical"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_below="@id/location_result"
-                android:gravity="center">
-
-            <ImageView android:layout_width="wrap_content"
-                       android:layout_height="wrap_content"
-                       android:id="@+id/front_image_result"
-                       android:src="@drawable/where"
-                       android:padding="8dp"
-                    />
-
-            <ImageView android:layout_width="wrap_content"
-                       android:layout_height="wrap_content"
-                       android:id="@+id/back_image_result"
-                       android:layout_toRightOf="@id/front_image_result"
-                       android:src="@drawable/gio_fencing"
-                       android:padding="8dp"
-                    />
-            <!--android:layout_alignBottom="@id/front_image_result"-->
-        </RelativeLayout>
+        <ImageView android:layout_width="wrap_content"
+                   android:layout_height="wrap_content"
+                   android:id="@+id/back_image_result"
+                   android:layout_toRightOf="@id/front_image_result"
+                   android:paddingLeft="4dp"
+                />
     </RelativeLayout>
+
     <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="120dp"
             android:layout_alignParentBottom="true"
             android:gravity="center"
-            android:paddingBottom="16dp">
+            android:paddingBottom="8dp">
 
-        <Button android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/cancel"
-                android:text=" cancel "
+        <Button android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:id="@+id/save"
+                android:text="Save "
+                android:layout_weight="2"
                 android:textSize="16sp"/>
 
-        <Button android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/submit" android:text="submit" android:textSize="16sp"/>
+        <Button android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:id="@+id/send"
+                android:layout_weight="2"
+                android:text="Send"
+                android:textSize="16sp"/>
     </LinearLayout>
 
 </RelativeLayout>
