--- a/res/layout/step_result.xml
+++ b/res/layout/step_result.xml
@@ -55,7 +55,7 @@
                 android:layout_height="match_parent"
                 android:id="@+id/send"
                 android:layout_weight="2"
-                android:text="Send"
+                android:text="Share"
                 android:textSize="16sp"/>
     </LinearLayout>
 
