--- a/res/drawable-hdpi/border.xml
+++ b/res/drawable-hdpi/border.xml
@@ -3,5 +3,5 @@
 
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
     <solid android:color="#ffffff"/>
-    <stroke android:width="2dip" android:color="#4fa5d5"/>
+    <stroke android:width="2dip" android:color="#c7c7c7"/>
 </shape>
