--- a/res/layout/login.xml
+++ b/res/layout/login.xml
@@ -46,7 +46,8 @@
                     android:layout_gravity="right|center_vertical"
                     android:textAlignment="viewStart"
                     android:gravity="center"
-                    android:textColorHint="#999999"
+                    android:focusable="true"
+                    android:textColorHint="#dddddd"
                     android:background="@drawable/border"
                     android:textSize="32sp"/>
 
