--- a/res/layout/step_result.xml
+++ b/res/layout/step_result.xml
@@ -19,7 +19,7 @@
     <RelativeLayout
             android:orientation="horizontal"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:layout_below="@id/location_result"
             android:paddingBottom="8dp">
 
