--- a/res/layout/login.xml
+++ b/res/layout/login.xml
@@ -9,13 +9,6 @@
                     android:gravity="center"
                     android:layout_marginTop="40dp">
 
-        <!--<ImageView-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="60dp"-->
-        <!--android:id="@+id/image"-->
-        <!--android:src="@drawable/where"-->
-        <!--android:layout_centerHorizontal="true" android:layout_alignParentTop="true"-->
-        <!--/>-->
 
         <RelativeLayout
                 android:orientation="vertical"
@@ -26,15 +19,6 @@
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentTop="true"
                 android:layout_marginTop="72dp">
-
-            <!--<TextView-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="fill_parent"-->
-            <!--android:text="Member Id: "-->
-            <!--android:id="@+id/label_memberid"-->
-            <!--android:layout_gravity="left|center_vertical" android:textSize="24sp"-->
-            <!--android:layout_alignBottom="@+id/input_memberid"-->
-            <!--android:gravity="center"-->
             />
             <EditText
                     android:layout_width="200dp"
@@ -49,16 +33,24 @@
                     android:focusable="true"
                     android:textColorHint="#dddddd"
                     android:background="@drawable/border"
-                    android:textSize="32sp"/>
+                    android:textSize="32sp"
+                    android:visibility="gone"/>
 
-            <!--<Button-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:text="Sign In"-->
-            <!--android:id="@+id/login"-->
-            <!--android:gravity="center"-->
-            <!--android:layout_centerHorizontal="true"-->
-            <!--android:layout_marginTop="96dp" android:textSize="24dp"/>-->
+            <TextView
+                    android:layout_width="200dp"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/status"
+                    android:layout_gravity="right|center_vertical"
+                    android:text="You are not in fence Area"
+                    android:textAlignment="viewStart"
+                    android:gravity="center"
+                    android:focusable="true"
+                    android:textColorHint="#dddddd"
+                    android:background="@drawable/border"
+                    android:textSize="32sp"
+                    />
+
+
         </RelativeLayout>
     </RelativeLayout>
 </RelativeLayout>
