--- a/res/layout/step_result.xml
+++ b/res/layout/step_result.xml
@@ -19,9 +19,11 @@
     <RelativeLayout
             android:orientation="horizontal"
             android:layout_width="match_parent"
+            android:id="@+id/image_layout"
             android:layout_height="wrap_content"
             android:layout_below="@id/location_result"
-            android:paddingBottom="8dp">
+            android:paddingBottom="8dp"
+            android:gravity="center">
 
         <ImageView android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
